@@ -98,6 +98,7 @@ CHANGELOG
   the file to be (force-)included in the current directory first.
 - Switched to Re2C V0.11.2
 - Added const specifiers to some of the context member functions.
+- Fixed a problem in the SLex C++ lexer (cpp_tokens example).
 
 Boost V1.34.0
 - Wave Version 1.2.4
